Added Console.Core Solution. Removed all unity References from Console.Core. Divided Console Code into 3 Extensions(EnvironmentVariables / Networking / PropEnvCompat). Added Testing Commandline Program.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Solution and project files
 *.sln
+!Console.Core.sln
 *.csproj
+!Console*.csproj
 
 # IDE generated
 .vs/
@@ -12,3 +14,4 @@ Library/
 Temp/
 obj/
 Build/
+bin/
