--- a/Console.Core/Console.Core/Console.Core.csproj
+++ b/Console.Core/Console.Core/Console.Core.csproj
@@ -5,9 +5,36 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Commands\Commands.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Commands.tt</DependentUpon>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="VDFramework.Standard">
       <HintPath>..\..\Console\Assets\Еxternal Code\VDFramework.Standard.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Commands\Commands.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Commands.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Commands\Commands.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Commands.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
