--- a/Console.Core/Console.CLI/Console.CLI.csproj
+++ b/Console.Core/Console.CLI/Console.CLI.csproj
@@ -70,6 +70,10 @@
       <Project>{3a3d6188-ce8d-4659-b2a6-29289a142761}</Project>
       <Name>Console.Networking</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Console.PersistentProperties\Console.PersistentProperties.csproj">
+      <Project>{e4e1ec58-86ac-428a-be42-12ed19405c9f}</Project>
+      <Name>Console.PersistentProperties</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Console.PropEnvCompat\Console.PropEnvCompat.csproj">
       <Project>{b7af4f3a-d9dc-4112-9fa6-31ddb4f6cfa2}</Project>
       <Name>Console.PropEnvCompat</Name>
