Improved File Structure Simplified Initialization Added Readonly Protection to properties

--- a/Console.Core/Console.CLI/Console.CLI.csproj
+++ b/Console.Core/Console.CLI/Console.CLI.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="CLIConsoleManager.cs" />
     <Compile Include="CLIObjSelector.cs" />
+    <Compile Include="CLIObjectSelectionCommands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
