--- a/Console/configs/init.cfg
+++ b/Console/configs/init.cfg
@@ -1,2 +1,2 @@
-console.scripts.autostart=configs/startup.txt
-console.output.writecommand=false
+scriptiocompat.scripts.autostart=configs/startup.txt
+core.output.writecommand=false
