--- a/Console.Core/Console.CLI/Console.CLI.csproj
+++ b/Console.Core/Console.CLI/Console.CLI.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CLIConsoleManager.cs" />
     <Compile Include="CLIObjSelector.cs" />
     <Compile Include="CLIObjectSelectionCommands.cs" />
+    <Compile Include="FlagTestClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
