Improved Logging System Added For Loop Capabilities. Experimented with the Script Syntax Implemented Parameters for Functions

--- a/Console.Core/Console.ScriptSystem/Console.ScriptSystem.csproj
+++ b/Console.Core/Console.ScriptSystem/Console.ScriptSystem.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Console.Core\Console.Core.csproj" />
+    <ProjectReference Include="..\Console.EnvironmentVariables\Console.EnvironmentVariables.csproj" />
   </ItemGroup>
 
 </Project>
